Iphone Background image distortion fixed

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     /* background: rgba(43, 43, 43, 0.5); */
     background-image: url(../images/about-us.jpg);
     background-position: center;
@@ -908,6 +909,11 @@ iframe {
     .row {
         margin-left: 0 !important;
         margin-right: 0 !important;
+    }
+    .inputbar2 button {
+        border-radius: 100px;
+        padding: 10px 0;
+        font-size: 15px;
     }
 }
 
